Remove hidden overflow to fix box shadow cut in ids-toolbar #852

--- a/src/components/ids-toolbar/ids-toolbar.scss
+++ b/src/components/ids-toolbar/ids-toolbar.scss
@@ -29,7 +29,6 @@
   flex-flow: row nowrap;
   height: 100%;
   justify-content: space-between;
-  overflow: hidden;
   width: 100%;
 
   &.disabled {
